--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-color: rgba(0, 0, 0, 0.1);
   align-items: center;
   margin: 3vmin 0px 3vmin 0px;
   height: 100%;
@@ -57,6 +58,10 @@
 #upcomingEvents img {
   width: 30%;
   margin: 1%;
+}
+
+#fall-card {
+  box-shadow: 0.75vmin 0.5vmin black;
 }
 
 @media (max-width: 768px) {
