--- a/src/pages/DocumentsPage/DocumentsPage.css
+++ b/src/pages/DocumentsPage/DocumentsPage.css
@@ -1,3 +1,14 @@
+.document-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.document-page h2 {
+  font-weight: bold;
+}
+
 .docu-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -12,9 +23,11 @@
 
 .docu-card {
   flex-direction: column;
-  padding: 2vmin;
-  margin: 2vmin;
+  padding: 3vmin;
+  margin: 1.5vmin;
   height: auto;
+  width: 45vmin;
+  box-shadow: 1vmin 1vmin black;
 }
 
 .docu-card img {
